Fixing sidebar to allow scrolling when items get too long

--- a/treasurer_tools/static/css/base.css
+++ b/treasurer_tools/static/css/base.css
@@ -106,12 +106,14 @@ select, input {
 #sidebar {
     background-color: rgb(40, 120, 200);
     border: 1px solid rgb(69, 69, 69);
+    bottom: 0;
     color: rgb(255, 255, 255);
-    height: 100%;
     left: -300px;
     margin: 5rem 0 0 0;
+    overflow-y: auto;
     padding: 0;
     position: fixed;
+    top: 0;
     transition: all ease-in-out 0.5s;
     width: 280px;
     z-index: 2;
